# CSE5914

./: .gitignore  README.md  TODO  main.py  package-lock.json  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: account.py  chat.py  crypto.py  events.py  groups.py  main.py  preferences.py  recommendations.py  requirements.txt  run.py
backend/Account/: account.py
backend/CreateAccount/: saveInformation.py
backend/Crypto/: crypto.py
backend/SqlQuerries/: create_account.sql  validate.sql
backend/Utils/: sql_helper.py
backend/accounts/: __init__.py  admin.py  follow.py  user.py
backend/sql_queries/: check_attendance.sql  check_event_option_attendance.sql  count_event_option_attendees.sql  create_account.sql  create_default_user_preferences.sql  create_event.sql  delete_event.sql  delete_user_preference_categories.sql  delete_user_preference_times.sql  follow_user.sql  get_categories.sql  get_event_attendees.sql  get_event_option_attendee_count.sql  get_event_option_attendees.sql  get_event_type.sql  get_followers.sql  get_following.sql  get_following_events.sql  get_joined_events.sql  get_recommendation_data.sql  get_user_events.sql  get_user_preference_categories.sql  get_user_preference_times.sql  get_user_preferences.sql  get_user_profile.sql  get_user_pubProfile.sql  get_user_token.sql  insert_event_options.sql  insert_user_preference_category.sql  insert_user_preference_time.sql  join_event.sql  join_event_option.sql  leave_event.sql  leave_event_option.sql  login.sql  (+8 more)
frontend/: index.html  package-lock.json  package.json
(+103 files in other folders)
