[project]
name = "cse5914"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-mail>=1.6.2",
    "fastapi[standard]>=0.129.0",
    "flask-cors>=6.0.2",
    "psycopg2-binary>=2.9.11",
    "pycryptodome>=3.23.0",
    "sqlalchemy>=2.0.47",
    "supabase>=2.27.2",
]
